--- a/Formulario.html
+++ b/Formulario.html
@@ -11,6 +11,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="./imagenes/icono.jpg">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
         .navbar {
             background-color: rgba(72, 72, 72, 0.492);
@@ -32,6 +33,11 @@
             text-align: center;
             margin-top: 12px;
         }
+
+        i{
+            font-size: 30px;
+            color: white;
+        }
     </style>
 </head>
 
@@ -51,18 +57,22 @@
                     <h3>REGISTRATE</h3>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label mt-4">Ingrese su nombre</label>
+                        &emsp;<i class="bi bi-person-circle"></i>
                         <input type="email" class="form-control mb-3" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label mt-4">Correo Electronico</label>
+                        &emsp;<i class="bi bi-envelope-check-fill"></i>
                         <input type="email" class="form-control mb-3" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputPassword1" class="form-label mt-4">contraseña</label>
+                        &emsp;<i class="bi bi-key-fill"></i>
                         <input type="password" class="form-control mb-3" id="exampleInputPassword1">
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label mt-4">Confirmar Contraseña</label>
+                        &emsp;<i class="bi bi-key-fill"></i>
                         <input type="password" class="form-control mb-3" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-3 form-check">
