--- a/Formulario.html
+++ b/Formulario.html
@@ -47,6 +47,7 @@
             <a href="./Carousel.html" id="boton_carousel" class="btn btn-outline-success me-2">Carousel</a>
             <a href="./Acorrdeon.html" id="boton_acordeon" class="btn btn-outline-success me-2">Acordeon</a>
             <a href="./Formulario.html" id="boton_formulario" class="btn btn-outline-success me-2">Formulario</a>
+            <a href="./tarea2.html" id="boton_formulario" class="btn btn-outline-success me-2">Imagenes Grid</a>
         </form>
     </nav>
     <div class="container-sm">
